# adventofcode2018

./: .gitignore  day01.py  day02.py  day03.py  day04.py  day05.py  pyproject.toml
tests/: test_day05.py
