[tool.poetry]
name = "adventofcode2018"
version = "0.1.0"
description = ""
authors = ["kbaikov <konstantin.baikov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
rope = "^0.11.0"

[tool.poetry.dev-dependencies]
black = "^18.9b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
