[tool.poetry]
name = "adventofcode2018"
version = "0.1.0"
description = ""
authors = ["kbaikov <konstantin.baikov@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.6"
rope = "^0.11.0"
pygame = "^1.9"
numpy = "^1.15"

[tool.poetry.dev-dependencies]
black = "18.9b0"

[tool.black]
line-length = 88
py36 = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
