[tool.poetry]
name = "adventofcode2018"
version = "0.1.0"
description = ""
authors = ["kbaikov <konstantin.baikov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^1.9"
pytest = "^5.2"

[tool.poetry.dev-dependencies]
black = "19.3b0"


[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"
